# weather-signal

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  deny.toml  mkdocs.yml
.github/: CODE_OF_CONDUCT.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/skills/weather-demand-signals/: SKILL.md
.github/skills/weather-location-setup/: SKILL.md
.github/skills/weather-signal/: SKILL.md
.github/skills/weather-signal/references/: forecasting-workflows.md  output-contracts.md  transport-cli.md  transport-mcp.md
.github/workflows/: ci.yml  docs.yml  release-prepare.yml  release-tag.yml  release.yml
docs/: index.md
docs/development/: agent-skills.md  ci.md  contributing.md  release.md
docs/getting-started/: installation.md  mcp-clients.md  quickstart.md  usage-patterns.md
docs/javascripts/: mermaid-init.js
docs/operations/: security.md  troubleshooting.md
docs/reference/: cli.md  configuration.md  mcp.md  output-contracts.md  signals.md
docs/stylesheets/: extra.css
scripts/: install.sh
skills/weather-signal/: SKILL.md
skills/weather-signal/references/: cli.md  demand-signals.md  locations.md
src/: app.rs  cache.rs  cli.rs  main.rs  mcp.rs  models.rs  output.rs  signals.rs  util.rs
tests/: mcp_protocol.rs
