[package]
name = "weather-signal"
version = "0.0.0"
rust-version = "1.93"
edition = "2024"
description = "Agent-first Open-Meteo CLI and MCP server for weather signals and demand forecasting features"
readme = "README.md"
license = "MIT"
repository = "https://github.com/joe-broadhead/weather-signal"
homepage = "https://github.com/joe-broadhead/weather-signal"
documentation = "https://joe-broadhead.github.io/weather-signal/"
keywords = ["weather", "forecast", "open-meteo", "cli", "signals"]
categories = ["command-line-utilities", "science"]

[profile.release]
lto = "thin"
strip = "symbols"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"
comfy-table = "7"
csv = "1"
futures = "0.3"
hex = "0.4"
humantime = "2"
axum = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rmcp = { version = "0.14.0", features = ["server", "macros", "transport-io", "transport-streamable-http-server"] }
schemars = { version = "1.2", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "net", "process", "io-util", "time"] }
tokio-util = "0.7"
toml = "1.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
url = "2"

[dev-dependencies]
tempfile = "3"
